# poetry-plugin-sort

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
poetry_plugin_sort/: config.py  plugins.py  sort.py  utils.py
tests/: conftest.py  test_commands.py  test_config.py  test_sorter.py
tests/fixtures/: pyproject_legacy_dev_group.toml  pyproject_legacy_dev_group__sorted.toml  pyproject_multiple_groups.toml  pyproject_multiple_groups__sorted.toml  pyproject_multiple_groups__sorted_optional.toml  pyproject_without_dependencies.toml
