[tool.poetry]
name = "poetry-plugin-sort"
version = "0.1.1"
description = "Poetry plugin to sort the dependencies alphabetically"
authors = ["Andrei Shabanski <shabanski.andrei@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/andrei-shabanski/poetry-plugin-sort"
repository = "https://github.com/andrei-shabanski/poetry-plugin-sort"
keywords = ["poetry", "plugin", "dependencies sorting"]

packages = [{include = "poetry_plugin_sort"}]

[tool.poetry.dependencies]
python = "^3.7"
poetry = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.3"
pytest-mock = "^3.8.2"

[tool.poetry.plugins."poetry.application.plugin"]
sort = "poetry_plugin_sort.plugins:SortDependenciesPlugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py37']
preview = true

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
