[tool.poetry]
name = "poetry-plugin-sort"
version = "0.2.1"
description = "Poetry plugin to sort the dependencies alphabetically"
authors = ["Andrei Shabanski <shabanski.andrei@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/andrei-shabanski/poetry-plugin-sort"
repository = "https://github.com/andrei-shabanski/poetry-plugin-sort"
keywords = ["poetry", "plugin", "dependencies sorting"]

packages = [{include = "poetry_plugin_sort"}]

[tool.poetry.dependencies]
python = "^3.7"
poetry = "^1.2.0"

[tool.poetry.group.dev.dependencies]
httpretty = "^1.1.4"
mypy = "^1.2"
pre-commit = "^2.20"
pytest = "^7.1"
pytest-mock = "^3.9"

[tool.poetry.plugins."poetry.application.plugin"]
sort = "poetry_plugin_sort.plugins:SortDependenciesPlugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py37']
preview = true

[tool.isort]
profile = "black"
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true

[tool.mypy]
python_version  = "3.7"
ignore_missing_imports = true
check_untyped_defs = true
